[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/world.png" type="Texture" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/Level1.gd" type="Script" id=3]
[ext_resource path="res://enemies/LadyBug.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 1.52588e-05, 1.52588e-05, 48, 1.52588e-05, 48, 48, 1.52588e-05, 48 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 1.52588e-05, 1.52588e-05, 48, 1.52588e-05, 48, 48, 1.52588e-05, 48 )

[sub_resource type="TileSet" id=5]
0/name = "platformPack_tilesheet@0.75.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "platformPack_tilesheet@0.75.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 144, 48, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "platformPack_tilesheet@0.75.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 144, 144, 48, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "world.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 240, 240, 48, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37, 36 )

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 512, 0, 0, 0, 0, 688, 512 )
}

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 3288, 225, 0, 0, 0, 0, 3632, 225 )
}

[sub_resource type="Curve2D" id=10]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 3328, 512, 0, 0, 0, 0, 2912, 512 )
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1680, 512, 0, 0, 0, 0, 2120, 512 )
}

[node name="Level1" type="TileMap"]
tile_set = SubResource( 5 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_mask = 6
format = 1
tile_data = PoolIntArray( 327748, 1, 0, 327749, 1, 0, 327750, 1, 0, 327751, 1, 0, 327752, 1, 0, 327753, 1, 0, 327754, 1, 0, 327755, 1, 0, 327758, 1, 0, 327759, 1, 0, 327760, 1, 0, 327761, 1, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458784, 1, 0, 458785, 1, 0, 458797, 1, 0, 458798, 1, 0, 524311, 1, 0, 524312, 1, 0, 524320, 1, 0, 524321, 1, 0, 524333, 1, 0, 524334, 1, 0, 524351, 1, 0, 524352, 1, 0, 524353, 1, 0, 524369, 1, 0, 589840, 1, 0, 589841, 1, 0, 589847, 1, 0, 589848, 1, 0, 589856, 1, 0, 589857, 1, 0, 589869, 1, 0, 589870, 1, 0, 655376, 1, 0, 655377, 1, 0, 655383, 1, 0, 655384, 1, 0, 655392, 1, 0, 655393, 1, 0, 655405, 1, 0, 655406, 1, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 720959, 0, 0, 720960, 0, 0, 720961, 0, 0, 720962, 0, 0, 720963, 0, 0, 720964, 0, 0, 720965, 0, 0, 720972, 0, 0, 720973, 0, 0, 720974, 0, 0, 720975, 0, 0, 720976, 0, 0, 720977, 0, 0, 720978, 0, 0, 720979, 0, 0, 720980, 0, 0, 720981, 0, 0, 720982, 0, 0, 720983, 0, 0, 720984, 0, 0, 720985, 0, 0, 720986, 0, 0, 720987, 0, 0, 720988, 0, 0, 720989, 0, 0, 720990, 0, 0, 720991, 0, 0 )
script = ExtResource( 3 )

[node name="Finish" type="Area2D" parent="."]
position = Vector2( 4260.38, 491.834 )
collision_layer = 8
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Finish"]
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="Finish"]
shape = SubResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]
collision_layer = 2
collision_mask = 12
spawn_path = NodePath("../SpawnPoint")

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 100, 500 )

[node name="LadyBug" parent="." instance=ExtResource( 4 )]
position = Vector2( 684.767, 511.384 )
patrol_path = NodePath("../Path2D")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 8 )

[node name="LadyBug3" parent="." instance=ExtResource( 4 )]
position = Vector2( 3344, 224 )
patrol_path = NodePath("../Path2D4")

[node name="Path2D4" type="Path2D" parent="."]
position = Vector2( 0, -1 )
curve = SubResource( 11 )

[node name="LadyBug4" parent="." instance=ExtResource( 4 )]
position = Vector2( 3288, 512 )
patrol_path = NodePath("../Path2D3")

[node name="Path2D3" type="Path2D" parent="."]
curve = SubResource( 10 )

[node name="LadyBug5" parent="." instance=ExtResource( 4 )]
position = Vector2( 2119, 512 )
patrol_path = NodePath("../Path2D2")

[node name="LadyBug6" parent="." instance=ExtResource( 4 )]
position = Vector2( 1675, 512 )
patrol_path = NodePath("../Path2D2")

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2( 0, -1 )
curve = SubResource( 9 )
[connection signal="body_entered" from="Finish" to="." method="_on_Finish_body_entered"]
[connection signal="died" from="LadyBug" to="." method="_on_LadyBug_died"]
[connection signal="player_hit" from="LadyBug" to="." method="_on_player_hit"]
[connection signal="died" from="LadyBug3" to="." method="_on_LadyBug_died"]
[connection signal="player_hit" from="LadyBug3" to="." method="_on_player_hit"]
[connection signal="died" from="LadyBug4" to="." method="_on_LadyBug_died"]
[connection signal="player_hit" from="LadyBug4" to="." method="_on_player_hit"]
[connection signal="died" from="LadyBug5" to="." method="_on_LadyBug_died"]
[connection signal="player_hit" from="LadyBug5" to="." method="_on_player_hit"]
[connection signal="died" from="LadyBug6" to="." method="_on_LadyBug_died"]
[connection signal="player_hit" from="LadyBug6" to="." method="_on_player_hit"]
